syntax = "proto3";

package sickrock;

option go_package = "github.com/jamesread/SickRock/gen/proto;sickrockpb";

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
  int64 timestamp_unix = 2; // UTC seconds since epoch
}

// Navigation
message GetNavigationLinksRequest {}

message NavigationLink {
  string label = 1;
  string path = 2;
}

message GetNavigationLinksResponse {
  repeated NavigationLink links = 1;
}

// Pages
message GetPagesRequest {}

message Page {
  string id = 1;
  string title = 2;
  string slug = 3;
  int32 ordinal = 4;
  string icon = 5;
}

message GetPagesResponse {
  repeated Page pages = 1;
}

// Items
message Item {
  string id = 1;
  int64 created_at_unix = 2;
  map<string, string> additional_fields = 3;
}

message ListItemsRequest {
  string page_id = 1;
}

message ListItemsResponse {
  repeated Item items = 1;
}

message CreateItemRequest {
  string page_id = 1;
  int64 created_at_unix = 2; // Optional custom timestamp
  map<string, string> additional_fields = 3;
}

message CreateItemResponse {
  Item item = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

message EditItemRequest {
  string id = 1;
  map<string, string> additional_fields = 2;
  string page_id = 3;
}

message EditItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string page_id = 1;
  string id = 2;
}

message DeleteItemResponse {
  bool deleted = 1;
}

// Table Structure
message GetTableStructureRequest {
  string page_id = 1;
}

message Field {
  string name = 1;
  string type = 2;
  bool required = 3;
  bool default_to_current_timestamp = 4;
}

message GetTableStructureResponse {
  repeated Field fields = 1;
  string CreateButtonText = 2;
}

message AddTableColumnRequest {
  string page_id = 1;
  Field field = 2;
}

// Build info
message InitRequest {}

message InitResponse {
  string version = 1;
  string commit = 2;
  string date = 3;
}

service SickRock {
  rpc Init(InitRequest) returns (InitResponse);
  rpc Ping(PingRequest) returns (PingResponse);

  // Navigation for the UI
  rpc GetNavigationLinks(GetNavigationLinksRequest) returns (GetNavigationLinksResponse);

  // Pages available in the application
  rpc GetPages(GetPagesRequest) returns (GetPagesResponse);

  // Generic CRUD over items on a page
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc EditItem(EditItemRequest) returns (EditItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);

  // Get structure/fields for a given page/table
  rpc GetTableStructure(GetTableStructureRequest) returns (GetTableStructureResponse);

  // Add a column to a table
  rpc AddTableColumn(AddTableColumnRequest) returns (GetTableStructureResponse);
}
